find_package(OpenMP REQUIRED)
enable_language(Fortran)

# Variable used for benchmarks that DO NOT require multithreading support
set(_benchmarks ghex_p2p_bi_cb_avail ghex_p2p_bi_cb_wait ghex_p2p_bi_ft_avail ghex_p2p_bi_ft_wait)

# Variable used for benchmarks that require multithreading support
set(_benchmarks_mt ghex_p2p_bi_cb_avail ghex_p2p_bi_cb_wait ghex_p2p_bi_ft_avail ghex_p2p_bi_ft_wait)

if (GHEX_BUILD_FORTRAN)
    set(_benchmarks_f fhex_p2p_bi_cb_avail fhex_p2p_bi_cb_wait fhex_p2p_bi_ft_avail fhex_p2p_bi_ft_wait)
    set(_benchmarks_f_mt fhex_p2p_bi_cb_avail fhex_p2p_bi_cb_wait fhex_p2p_bi_ft_avail fhex_p2p_bi_ft_wait)
else()
    set(_benchmarks_f     ) # This is not necessary, but at least it is clear that there are not benchmarks in this case
    set(_benchmarks_f_mt  ) # This is not necessary, but at least it is clear that there are not benchmarks in this case
endif()

foreach (_t ${_benchmarks})
    add_executable(${_t} ${_t}_mt.cpp )
    target_compile_definitions(${_t} PRIVATE USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR)
    target_link_libraries(${_t} ghexlib)
endforeach()

if (OpenMP_FOUND)
    foreach (_t ${_benchmarks_mt})
        add_executable(${_t}_mt ${_t}_mt.cpp )
        target_compile_definitions(${_t}_mt PRIVATE USE_OPENMP USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR)
        target_link_libraries(${_t}_mt ghexlib OpenMP::OpenMP_CXX)
    endforeach()
endif()

if (GHEX_USE_UCP)
   foreach (_t ${_benchmarks})
        add_executable(${_t}_ucx ${_t}_mt.cpp )
        target_compile_definitions(${_t}_ucx PRIVATE USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR USE_UCP)
        target_link_libraries(${_t}_ucx ghexlib)
        if (GHEX_USE_PMIX)
            target_compile_definitions(${_t}_ucx PRIVATE GHEX_USE_PMI)
        endif()
    endforeach()

    foreach (_t ${_benchmarks_mt})
        add_executable(${_t}_mt_ucx ${_t}_mt.cpp )
        target_compile_definitions(${_t}_mt_ucx PRIVATE USE_OPENMP USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR USE_UCP)
        target_link_libraries(${_t}_mt_ucx ghexlib)
        if (GHEX_USE_PMIX)
            target_compile_definitions(${_t}_mt_ucx PRIVATE GHEX_USE_PMI)
        endif()
        if (OpenMP_FOUND)
            target_compile_definitions(${_t}_mt_ucx PRIVATE USE_OPENMP)
            target_link_libraries(${_t}_mt_ucx OpenMP::OpenMP_CXX)
        endif()
    endforeach()

   foreach (_t ${_benchmarks_f})
        add_executable(${_t} ${_t}_mt.f90 )
        target_compile_definitions(${_t} PRIVATE USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR)
        target_include_directories(${_t} PRIVATE ${CMAKE_SOURCE_DIR}/include ${PROJECT_BINARY_DIR}/bindings/ ${MPI_Fortran_INCLUDE_DIRS})
        target_link_libraries(${_t} ghexlib fhex ${MPI_Fortran_LIBRARIES})
        if (GHEX_USE_PMIX)
            target_compile_definitions(${_t} PRIVATE USE_PMIX)
        endif()
    endforeach()

    foreach (_t ${_benchmarks_f_mt})
        add_executable(${_t}_mt ${_t}_mt.f90 )
        target_compile_options(${_t}_mt PRIVATE ${OpenMP_CXX_FLAGS})
        target_compile_definitions(${_t}_mt PRIVATE USE_OPENMP USE_HEAVY_CALLBACKS USE_RAW_SHARED_MESSAGE USE_POOL_ALLOCATOR)
        target_include_directories(${_t}_mt PRIVATE ${CMAKE_SOURCE_DIR}/include ${PROJECT_BINARY_DIR}/bindings/ ${MPI_Fortran_INCLUDE_DIRS})
        target_link_libraries(${_t}_mt ghexlib fhex ${MPI_Fortran_LIBRARIES} OpenMP::OpenMP_CXX)
        if (GHEX_USE_PMIX)
            target_compile_definitions(${_t}_mt PRIVATE USE_PMIX)
        endif()
    endforeach()

endif()
